@@ -98,13 +98,11 @@ static openvassd_option openvassd_defaults[] = {
 /**
  * @brief Initializes the preferences structure
  */
-int
+void
 preferences_init (char *config_file, struct arglist **prefs)
 {
-  int result;
   *prefs = g_malloc0 (sizeof (struct arglist));
-  result = preferences_process (config_file, *prefs);
-  return (result);
+  preferences_process (config_file, *prefs);
 }
 
 
