@@ -1,3 +1,10 @@
+2014-10-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* src/preferences.c (preferences_init): Dropped the return value
+	because it is never used anywhere.
+
+	* src/preferences.h: Adjust proto accordingly.
+
 2014-10-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* src/nasl_plugins.c (nasl_plugin_add): Removed redundant setting
